# NetworkProgrammingServer

./: .gitignore  CMakeLists.txt  Makefile  README  connection_queue.c  connection_queue.h  http.c  http.h  list.c  list.h  stream.c  stream.h  string_util.c  string_util.h  ttac.c
SQL/: create_attendance.sql  create_chat.sql  create_group.sql  create_todo.sql  create_user.sql
libhttp-1.8/examples/hello/: hello
